# l2f-jsbsim

./: README.md
Code/: configure.in
Code/aircraft/A320/: A320.xml  initfile.xml
Code/aircraft/Tutorial_1/: Tutorial_1.xml
Code/aircraft/Tutorial_1/Results/: Short.xlsx  Thumbs.db  phugoid.xlsx  test2.csv  trim-cruise.csv  trim2.csv  trim3.csv
Code/aircraft/Tutorial_1/criteria/: flap-change-up.crt  phugoid.crt  roll-response.crt  trim-approach.crt  trim-cruise.crt
Code/aircraft/Tutorial_1/plots/: flap-change-up.p  flap-change-up.pf  phugoid.p  phugoid.pf  roll-response.p  roll-response.pf  trim-approach.p  trim-approach.pf  trim-cruise.p  trim-cruise.pf
Code/aircraft/Tutorial_1/scripts/: Glider.xml  Short_period.xml  airborne.xml  flap-change-up.xml  phugoid.xml  roll-response.xml  trim-approach.xml  trim-cruise.csv  trim-cruise.xml
Code/aircraft/ball/: airborne.xml  ball.xml
Code/aircraft/c172r/: c172r.xml
Code/aircraft/c172x/: c172x.xml
Code/aircraft/sgs126/: initfile.xml  sgs126.xml
Code/scripts/: A320_test.xml  Glider.xml
Code/src/: FGFDMExec.cpp  FGFDMExec.h  JSBSim.cpp  JSBSim.cpp~  JSBSim_control.cpp  JSBSim_control.cpp~  JSBSim_original.cpp  JSBSim_reward.cpp  JSBSim_reward.cpp~  Makefile.am  Makefile.am~  WindField_Config.txt  try.cpp
Code/src/models/: FGAtmosphere.cpp  FGAtmosphere.h  Makefile.am
Code/src/models/thermal/: Makefile.am  Makefile.am~  Thermals.cpp  Thermals.cpp~  Thermals.hpp  Thermals.hpp~  Windfield.cpp  Windfield.cpp~  Windfield.hpp  Windfield.hpp~
Output/: gra.py  graph1.py
